--- a/front/src/app/feed/feed.component.html
+++ b/front/src/app/feed/feed.component.html
@@ -12,7 +12,7 @@
     </mat-card-header>
     <img mat-card-image [src]="music.imageUrl">
     <mat-card-content>
-      <p>Description</p>
+      <p>{{music.description}}</p>
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="primary">{{music.likes}}</button>
