catch err if addMusic doesnt work

--- a/front/src/app/dialog-add-music/dialog-add-music.component.html
+++ b/front/src/app/dialog-add-music/dialog-add-music.component.html
@@ -19,7 +19,7 @@
         <mat-label>Description</mat-label>
         <input matInput formControlName="description">
     </mat-form-field>
-    <button type="submit" mat-raised-button color="primary" (click)="onSubmit()">
+    <button type="submit" mat-raised-button color="primary" (click)="onSubmit()" mat-dialog-close>
         Ajouter
     </button>
 </form>
