--- a/front/src/app/search-list/search-list.component.html
+++ b/front/src/app/search-list/search-list.component.html
@@ -8,7 +8,7 @@
           <a class="header" style="margin: 1em 0 1em 0;">{{ video.title }}</a>
           <div class="meta">
             <span class="date" style="font-weight: bolder;">
-              <a [href]="video.channelUrl" target="_blank">{{ video.channelTitle }}</a>
+              {{ video.channelTitle }}
             </span>
             <span class="ui right floated date" style="font-weight: bolder;">{{ video.publishedAt | date:'mediumDate' }}</span>
           </div>
@@ -16,12 +16,6 @@
             {{ video.description?.slice(0,50) }}...
           </div>
         </div>
-        <a [href]="video.videoUrl" target="_blank" class="extra content">
-          <button class="ui right floated tiny red right labeled icon button">
-            <i class="external alternate icon"></i>
-            Watch
-          </button>
-        </a>
       </div>
     </div>
   </div>
