--- a/front/src/app/dialog-add-music/dialog-add-music.component.html
+++ b/front/src/app/dialog-add-music/dialog-add-music.component.html
@@ -1,33 +1,35 @@
-<form [formGroup]="addMusicForm">
-    <mat-form-field appearance="fill">
-        <mat-label>Titre</mat-label>
-        <input matInput formControlName="title">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Auteur</mat-label>
-        <input matInput formControlName="author">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Genre</mat-label>
-        <mat-select formControlName="genre">
-            <mat-option value="Rap">Rap</mat-option>
-            <mat-option value="Rock">Rock</mat-option>
-            <mat-option value="Funk">Funk</mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Description</mat-label>
-        <input matInput formControlName="description">
-    </mat-form-field>
-    <button type="submit" mat-raised-button color="primary" (click)="onSubmit()" mat-dialog-close>
-        Ajouter
-    </button>
-</form>
-<button mat-raised-button color="warn">Ajouter avec Youtube</button>
-<app-search-container></app-search-container>
-<div *ngIf="newMusicPreview$ | async as music">
-    <h2>{{ music.title | uppercase }}</h2>
-    <p>{{ music.author }}</p>
-    <p>{{ music.genre }}</p>
-    <p>{{ music.description}}</p>
-</div>
+<mat-dialog-content>
+    <form [formGroup]="addMusicForm">
+        <mat-form-field appearance="fill">
+            <mat-label>Titre</mat-label>
+            <input matInput formControlName="title">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Auteur</mat-label>
+            <input matInput formControlName="author">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Genre</mat-label>
+            <mat-select formControlName="genre">
+                <mat-option value="Rap">Rap</mat-option>
+                <mat-option value="Rock">Rock</mat-option>
+                <mat-option value="Funk">Funk</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Description</mat-label>
+            <input matInput formControlName="description">
+        </mat-form-field>
+        <button type="submit" mat-raised-button color="primary" (click)="onSubmit()" mat-dialog-close>
+            Ajouter
+        </button>
+    </form>
+    <button mat-raised-button color="warn">Ajouter avec Youtube</button>
+    <app-search-container></app-search-container>
+    <div *ngIf="newMusicPreview$ | async as music">
+        <h2>{{ music.title | uppercase }}</h2>
+        <p>{{ music.author }}</p>
+        <p>{{ music.genre }}</p>
+        <p>{{ music.description}}</p>
+    </div>    
+</mat-dialog-content>
